# tdd-workshop

./: .clang-format  CMakeLists.txt  LICENSE  PITCHME.md  README.md
cmake/: CMakeLists.txt  timestamp.cmake  unittests.cmake
exersice1/: CMakeLists.txt  say.cpp  say.h
exersice1.2/: CMakeLists.txt  say.cpp  say.h  say_unittest.cpp
exersice2/: CMakeLists.txt  roman.cpp  roman.h  roman_unittest.cpp
exersice3/: CMakeLists.txt  bowling.cpp  bowling.h  bowling_unittest.cpp
exersice4/: CMakeLists.txt  add3.cpp  add3.h  add3_unittest.cpp
exersice5/: CMakeLists.txt  card_shuffle.cpp  card_shuffle.h  card_shuffle_unittest.cpp
